--- a/test-1.html
+++ b/test-1.html
@@ -550,13 +550,13 @@ gtag('config', 'G-H1JW8YBDZ8');
 
   <div class="focus-text-group">
     <div style="color: #0c2340; font-size: 15px; font-weight: 800; letter-spacing: -0.2px; line-height: 1.4;">
-      February Qualifiers: Completion of qualifying rounds and documentation of spring scoring metrics.
+      <b style="font-weight: 900;">February Qualifiers:</b> Completion of qualifying rounds and documentation of spring scoring metrics.
     </div>
     <div style="color: #0c2340; font-size: 15px; font-weight: 800; letter-spacing: -0.2px; line-height: 1.4; margin-top: 8px;">
-      Upcoming Competition: Preparation for the Military City Collegiate.
+      <b style="font-weight: 900;">Upcoming Competition:</b> Preparation for the Military City Collegiate.
     </div>
     <div style="color: #64748b; font-size: 14px; font-weight: 600; line-height: 1.4; margin-top: 8px;">
-      Current Academic & Physical Focus: Coursework and recovery protocols aligned with back-to-back tournament scheduling.
+      <b style="font-weight: 800; color: #475569;">Current Academic & Physical Focus:</b> Coursework and recovery protocols aligned with back-to-back tournament scheduling.
     </div>
   </div>
 
