--- a/junior-career.html
+++ b/junior-career.html
@@ -615,38 +615,64 @@
     ];
 
     function popupJrGallery(index) {
-      const w = window.innerWidth > 1000 ? 1000 : window.innerWidth;
-      const h = window.innerHeight > 900 ? 900 : window.innerHeight;
+      // Logic for Views Count (Initial 1)
+      let currentViews = localStorage.getItem('jr_gallery_views');
+      if (!currentViews) {
+          currentViews = 0;
+      }
+      currentViews = parseInt(currentViews) + 1;
+      localStorage.setItem('jr_gallery_views', currentViews);
+
+      const w = window.innerWidth > 1100 ? 1100 : window.innerWidth;
+      const h = window.innerHeight > 950 ? 950 : window.innerHeight;
       const left = (screen.width / 2) - (w / 2);
       const top = (screen.height / 2) - (h / 2);
       const popup = window.open("", "JoshuaJrGallery", "width="+w+",height="+h+",top="+top+",left="+left+",resizable=yes");
       
       let htmlContent = '<html><head><title>Joshua Hong Junior Gallery</title><style>';
-      htmlContent += 'body { margin: 0; background: #000; color: white; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; overflow: hidden; font-family: sans-serif; }';
-      htmlContent += '.nav-btn { position: absolute; top: 50%; transform: translateY(-50%); font-size: 50px; color: rgba(255,255,255,0.3); cursor: pointer; user-select: none; padding: 20px; transition: 0.3s; z-index: 100; text-decoration: none; }';
-      htmlContent += '.nav-btn:hover { color: white; background: rgba(255,255,255,0.1); border-radius: 50%; } #prev { left: 20px; } #next { right: 20px; }';
-      htmlContent += '#close { position: absolute; top: 25px; right: 25px; font-size: 40px; cursor: pointer; opacity: 0.5; z-index: 101; transition: 0.3s; }';
-      htmlContent += '#close:hover { opacity: 1; }';
-      htmlContent += '#mainImg { max-width: 85%; max-height: 80vh; object-fit: contain; border-radius: 4px; transition: opacity 0.2s; box-shadow: 0 0 30px rgba(0,0,0,0.5); }';
-      htmlContent += '.counter { position: absolute; bottom: 40px; font-size: 14px; letter-spacing: 3px; color: rgba(255,255,255,0.5); font-weight: 300; }';
+      htmlContent += 'body { margin: 0; background: #000; color: white; display: flex; flex-direction: column; align-items: center; justify-content: flex-start; min-height: 100vh; overflow-x: hidden; overflow-y: auto; font-family: sans-serif; padding: 20px 0 60px 0; box-sizing: border-box; -webkit-overflow-scrolling: touch; }';
+      htmlContent += '.nav-btn { position: fixed; top: 50%; transform: translateY(-50%); font-size: 90px; color: rgba(255,255,255,0.4); cursor: pointer; user-select: none; padding: 30px 40px; transition: 0.3s; z-index: 10; font-weight: 200; text-decoration: none; }';
+      htmlContent += '.nav-btn:hover { color: white; background: rgba(255,255,255,0.1); } #prev { left: 0; } #next { right: 0; }';
+      htmlContent += '#close-x { position: fixed; top: 20px; right: 20px; font-size: 50px; cursor: pointer; opacity: 0.7; z-index: 20; transition: 0.3s; line-height: 1; font-weight: 300; }';
+      htmlContent += '#close-x:hover { opacity: 1; transform: rotate(90deg); color: #ff4d4d; }';
+      htmlContent += '#imgContainer { width: 100%; display: flex; justify-content: center; align-items: center; flex: 1; position: relative; margin: 20px 0; }';
+      htmlContent += '#mainImg { max-width: 95%; max-height: 70vh; object-fit: contain; border-radius: 8px; transition: opacity 0.2s; box-shadow: 0 0 30px rgba(255,255,255,0.1); user-select: none; -webkit-user-drag: none; }';
+      htmlContent += '.bottom-controls { display: flex; flex-direction: column; align-items: center; gap: 15px; width: 100%; padding: 20px 0; margin-top: auto; }';
+      htmlContent += '.close-btn-bottom { background: #fff; color: #000; border: none; padding: 18px 60px; border-radius: 40px; font-weight: 900; font-size: 18px; cursor: pointer; letter-spacing: 2px; transition: 0.3s; box-shadow: 0 5px 15px rgba(0,0,0,0.3); }';
+      htmlContent += '.close-btn-bottom:hover { background: #ff4d4d; color: #fff; transform: scale(1.05); }';
+      htmlContent += '.info-row { display: flex; align-items: center; gap: 20px; opacity: 0.6; }';
+      htmlContent += '.counter, .view-count { font-size: 14px; letter-spacing: 2px; font-weight: 600; display: flex; align-items: center; gap: 8px; }';
+      htmlContent += '@media (max-width: 768px) { body { padding-top: 60px; } .nav-btn { display: none; } #close-x { font-size: 45px; top: 15px; right: 15px; } #mainImg { max-height: 60vh; } .close-btn-bottom { padding: 15px 45px; font-size: 15px; } }';
       htmlContent += '</style></head><body>';
-      htmlContent += '<div id="close" onclick="window.close()">×</div>';
+      htmlContent += '<div id="close-x" onclick="window.close()">×</div>';
       htmlContent += '<div id="prev" class="nav-btn" onclick="move(-1)">❮</div>';
-      htmlContent += '<img id="mainImg" src="' + jrImages[index] + '" onclick="move(1)">';
+      htmlContent += '<div id="imgContainer"><img id="mainImg" src="' + jrImages[index] + '"></div>';
       htmlContent += '<div id="next" class="nav-btn" onclick="move(1)">❯</div>';
-      htmlContent += '<div class="counter" id="countDisplay">' + (index + 1) + ' / ' + jrImages.length + '</div>';
+      htmlContent += '<div class="bottom-controls">';
+      htmlContent += '  <button class="close-btn-bottom" onclick="window.close()">CLOSE WINDOW</button>';
+      htmlContent += '  <div class="info-row">';
+      htmlContent += '    <div class="view-count"><span>👁</span> ' + currentViews.toLocaleString() + '</div>';
+      htmlContent += '    <div style="width: 1px; height: 12px; background: rgba(255,255,255,0.3);"></div>';
+      htmlContent += '    <div class="counter" id="countDisplay">' + (index + 1) + ' / ' + jrImages.length + '</div>';
+      htmlContent += '  </div>';
+      htmlContent += '</div>';
       htmlContent += '<script>';
       htmlContent += 'let idx = ' + index + ';';
       htmlContent += 'const imgArray = ' + JSON.stringify(jrImages) + ';';
+      htmlContent += 'let sX = 0; let eX = 0;';
+      htmlContent += 'const container = document.getElementById("imgContainer");';
+      htmlContent += 'container.addEventListener("touchstart", (e) => { sX = e.changedTouches[0].screenX; }, {passive: true});';
+      htmlContent += 'container.addEventListener("touchend", (e) => { eX = e.changedTouches[0].screenX; handleSwipe(); }, {passive: true});';
+      htmlContent += 'function handleSwipe() { if (sX - eX > 50) move(1); else if (eX - sX > 50) move(-1); }';
       htmlContent += 'function move(step) {';
       htmlContent += '  idx = (idx + step + imgArray.length) % imgArray.length;';
       htmlContent += '  const img = document.getElementById("mainImg");';
-      htmlContent += '  img.style.opacity = 0.4;';
+      htmlContent += '  img.style.opacity = 0;';
       htmlContent += '  setTimeout(() => {';
       htmlContent += '    img.src = imgArray[idx];';
       htmlContent += '    document.getElementById("countDisplay").innerText = (idx + 1) + " / " + imgArray.length;';
       htmlContent += '    img.style.opacity = 1;';
-      htmlContent += '  }, 120);';
+      htmlContent += '  }, 150);';
       htmlContent += '}';
       htmlContent += 'window.addEventListener("keydown", (e) => {';
       htmlContent += '  if (e.key === "ArrowLeft") move(-1);';
