--- a/test-1.html
+++ b/test-1.html
@@ -621,7 +621,7 @@ gtag('config', 'G-H1JW8YBDZ8');
 
 
 
- <div class="focus-section-wrapper" style="width: 100%; max-width: 1000px; margin: 10px auto; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; box-sizing: border-box;">
+ <div class="focus-section-wrapper" style="width: 100%; max-width: 1000px; margin: 0 auto !important; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; box-sizing: border-box;">
   
   <div class="focus-container" style="display: flex; flex-direction: column; align-items: flex-start; padding: 25px 30px; border: 2px solid #0c2340; border-radius: 16px; position: relative; width: 100%; box-sizing: border-box; background: #ffffff; box-shadow: 0 2px 8px rgba(12, 35, 64, 0.05); transition: none !important;">
     
@@ -655,6 +655,7 @@ gtag('config', 'G-H1JW8YBDZ8');
       </svg>
     </a>
   </div>
+
 
 
      
