--- a/test-1.html
+++ b/test-1.html
@@ -617,38 +617,33 @@ gtag('config', 'G-H1JW8YBDZ8');
   </div>
 </div>
 
-<div class="focus-section-wrapper" style="width: 100%; max-width: 1000px; margin: 10px auto 0 auto !important; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; box-sizing: border-box;">
-  <div class="focus-container" style="display: flex; flex-direction: column; align-items: flex-start; padding: 25px 30px; border: 2px solid #0c2340; border-radius: 16px; position: relative; width: 100%; box-sizing: border-box; background: #ffffff; box-shadow: 0 2px 8px rgba(12, 35, 64, 0.05); transition: none !important;">
+
+<div class="current-focus-header-wrapper" style="width: 100%; margin-top: 30px; margin-bottom: 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+  <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 10px; box-sizing: border-box;">
     
-    <div class="focus-badge" style="display: flex; align-items: center; gap: 6px; background: #0c2340; color: #ffffff; padding: 5px 12px; border-radius: 6px; font-size: 11px; font-weight: 800; letter-spacing: 0.5px; margin-bottom: 18px; text-transform: uppercase;">
-      <span style="width: 5px; height: 5px; background: #94a3b8; border-radius: 50%;"></span>
-      CURRENT FOCUS
+    <div style="box-sizing: border-box;">
+      <h2 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #0c2340; padding-left: 20px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+          <circle cx="12" cy="12" r="10"></circle>
+          <circle cx="12" cy="12" r="3"></circle>
+        </svg>
+        CURRENT FOCUS
+      </h2>
     </div>
 
-    <div class="focus-text-group" style="width: 100%; display: flex; flex-direction: column; gap: 10px; text-align: left;">
-      <div style="color: #0c2340; font-size: 15px; letter-spacing: -0.2px; line-height: 1.4; display: flex; align-items: flex-start; flex-wrap: nowrap;">
-        <b style="font-weight: 900; width: 185px; flex-shrink: 0; color: #0c2340;">February Qualifiers:</b>
-        <span style="font-weight: 400; color: #334155;">Finalizing spring performance metrics and scoring stability.</span>
+    <a href="ncaa-stats.html#Current-Focus" style="display: flex; align-items: center; gap: 10px; text-decoration: none;">
+      <span style="color: #64748b; font-size: 11px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">SEE MORE</span>
+      <div style="width: 32px; height: 32px; border: 1.5px solid #e2e8f0; border-radius: 6px; display: flex; align-items: center; justify-content: center; background: #ffffff; transition: 0.2s;">
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+          <line x1="7" y1="17" x2="17" y2="7"></line>
+          <polyline points="7 7 17 7 17 17"></polyline>
+        </svg>
       </div>
-      
-      <div style="color: #0c2340; font-size: 15px; letter-spacing: -0.2px; line-height: 1.4; display: flex; align-items: flex-start; flex-wrap: nowrap;">
-        <b style="font-weight: 900; width: 185px; flex-shrink: 0; color: #0c2340;">Upcoming Competition:</b>
-        <span style="font-weight: 400; color: #334155;">Strategic preparation for the Military City Collegiate (Feb 23-24).</span>
-      </div>
-
-      <div style="color: #64748b; font-size: 14px; line-height: 1.4; display: flex; align-items: flex-start; flex-wrap: nowrap; margin-top: 4px; padding-top: 12px; border-top: 1px solid #f1f5f9;">
-        <b style="font-weight: 800; width: 185px; flex-shrink: 0; color: #475569;">Coursework Integration:</b>
-        <span style="font-weight: 400; color: #64748b;">On-site academic productivity managed through back-to-back tournament cycles.</span>
-      </div>
-    </div>
-
-    <a href="ncaa-stats.html#Current-Focus" class="focus-link-box" style="position: absolute; top: 25px; right: 25px; width: 38px; height: 38px; border: 2px solid #0c2340; border-radius: 8px; display: flex; align-items: center; justify-content: center; text-decoration: none; background: #ffffff; transition: none !important;">
-      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
-        <line x1="7" y1="17" x2="17" y2="7"></line>
-        <polyline points="7 7 17 7 17 17"></polyline>
-      </svg>
     </a>
+
   </div>
+  <div style="width: 100%; height: 1px; background: #edf2f7; margin-top: 10px;"></div>
+</div>
 
 
 
