--- a/test-1.html
+++ b/test-1.html
@@ -618,23 +618,22 @@ gtag('config', 'G-H1JW8YBDZ8');
 </div>
 
 
-<div class="current-focus-header-wrapper" style="width: 100%; margin-top: 30px; margin-bottom: 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-  <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 10px; box-sizing: border-box;">
+<div class="current-focus-header-wrapper" style="width: 100%; margin-top: 25px; margin-bottom: 5px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+  <div style="display: flex; justify-content: space-between; align-items: center; gap: 10px; box-sizing: border-box;">
     
-    <div style="box-sizing: border-box;">
-      <h2 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #0c2340; padding-left: 20px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-          <circle cx="12" cy="12" r="10"></circle>
-          <circle cx="12" cy="12" r="3"></circle>
-        </svg>
+    <div style="display: flex; align-items: center; gap: 12px; flex: 1; min-width: 0;">
+      <h2 style="font-size: 17px; color: #0c2340; margin: 0; border-left: 5px solid #0c2340; padding-left: 15px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; white-space: nowrap; flex-shrink: 0;">
         CURRENT FOCUS
       </h2>
+      <p style="margin: 0; color: #64748b; font-size: 13px; font-weight: 500; letter-spacing: -0.1px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+        Current priorities & seasonal progress
+      </p>
     </div>
 
-    <a href="ncaa-stats.html#Current-Focus" style="display: flex; align-items: center; gap: 10px; text-decoration: none;">
-      <span style="color: #64748b; font-size: 11px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">SEE MORE</span>
-      <div style="width: 32px; height: 32px; border: 1.5px solid #e2e8f0; border-radius: 6px; display: flex; align-items: center; justify-content: center; background: #ffffff; transition: 0.2s;">
-        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+    <a href="ncaa-stats.html#Current-Focus" style="display: flex; align-items: center; gap: 8px; text-decoration: none; flex-shrink: 0;">
+      <span style="color: #64748b; font-size: 10px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">SEE MORE</span>
+      <div style="width: 34px; height: 34px; border: 2px solid #0c2340; border-radius: 8px; display: flex; align-items: center; justify-content: center; background: #ffffff; box-sizing: border-box;">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
           <line x1="7" y1="17" x2="17" y2="7"></line>
           <polyline points="7 7 17 7 17 17"></polyline>
         </svg>
