--- a/test-1.html
+++ b/test-1.html
@@ -618,7 +618,7 @@ gtag('config', 'G-H1JW8YBDZ8');
 </div>
 
 
-<div class="current-focus-header-wrapper" style="width: 100%; margin-top: 5px; margin-bottom: 0px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="current-focus-header-wrapper" style="width: 100%; margin-top: 25px; margin-bottom: 0px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <div style="display: flex; justify-content: space-between; align-items: center; gap: 15px; flex-wrap: wrap; box-sizing: border-box;">
     
     <div style="display: flex; align-items: center; gap: 12px; flex: 1; flex-wrap: wrap; min-width: 0;">
@@ -641,7 +641,7 @@ gtag('config', 'G-H1JW8YBDZ8');
     </a>
 
   </div>
-  <div style="width: 100%; height: 1px; background: #edf2f7; margin-top: 8px;"></div>
+  <div style="width: 100%; height: 1px; background: #edf2f7; margin-top: 10px; margin-bottom: 0px;"></div>
 </div>
   
 </div>
