--- a/test-1.html
+++ b/test-1.html
@@ -603,7 +603,7 @@ gtag('config', 'G-H1JW8YBDZ8');
           <div style="display: flex; width: 140px; justify-content: space-between; align-items: center;">
             <span style="color: #e74c3c; font-size: 19px; font-weight: 800; width: 40px; text-align: center;">68 (-4)</span>
             <span style="color: #e74c3c; font-size: 19px; font-weight: 800; width: 40px; text-align: center;">67 (-5)</span>
-            <span style="color: #e74c3c; font-size: 19px; font-weight: 800; width: 40px; text-align: center;">67 (-5)</span>
+            <span style="color: #0c2340; font-size: 19px; font-weight: 800; width: 40px; text-align: center;">77 (+5)</span>
           </div>
         </div>
       </div>
