--- a/test-2.html
+++ b/test-2.html
@@ -427,8 +427,8 @@
            <tr style="background: #fffaf0;">
               <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 800; color: #0c2340;">Feb 17, 2026</td>
               <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 800; color: #0c2340;">The Canyons Course</td>
-              <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 800; color:  #0c2340; font-family: 'Oswald', sans-serif; font-size: 1.15em;">TBD</td>
-              <td style="padding: 12px; color:  #0c2340; font-weight: 800; font-size: 1.1em;">In Progress</td>
+              <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 800; color:  #0c2340; font-family: 'Oswald', sans-serif; font-size: 1.15em;">77</td>
+              <td style="padding: 12px; color:  #0c2340; font-weight: 800; font-size: 1.1em;">+5</td>
             </tr>
             <tr style="border-bottom: 1px solid #eee; background: rgba(0, 0, 0, 0.02);">
               <td style="padding: 12px; border-right: 1px solid #eee; color: #aaa;">Feb 12, 2026</td>
@@ -468,12 +468,12 @@
   </td>
   <td style="width: 17.5%; padding: 12px; text-align: center; border-right: 1px solid #eee;">
     <span style="font-weight: 700; font-size: 1.05em; font-family: 'Oswald', sans-serif; color: #E31837;">
-      68.86
+      69.87
     </span>
   </td>
   <td style="width: 17.5%; padding: 12px; text-align: center;">
     <span style="font-weight: 700; font-size: 1.05em; font-family: 'Oswald', sans-serif; color: #E31837;">
-      -3.14
+      -2.13
     </span>
   </td>
 </tr>
