--- a/test-1.html
+++ b/test-1.html
@@ -621,14 +621,14 @@ gtag('config', 'G-H1JW8YBDZ8');
 <div class="current-focus-header-wrapper" style="width: 100%; margin-top: 25px; margin-bottom: 0px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <div style="display: flex; justify-content: space-between; align-items: center; gap: 15px; flex-wrap: wrap; box-sizing: border-box;">
     
-    <div style="display: flex; align-items: center; gap: 12px; flex: 1; flex-wrap: wrap; min-width: 0;">
-      <h2 style="font-size: 17px; color: #0c2340; margin: 0; border-left: 5px solid #0c2340; padding-left: 15px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; white-space: nowrap;">
-        CURRENT FOCUS
-      </h2>
-      <p style="margin: 0; color: #64748b; font-size: 13px; font-weight: 500; letter-spacing: -0.1px; line-height: 1.4; word-break: keep-all;">
-        Current priorities & seasonal progress
-      </p>
-    </div>
+    <div style="display: flex; align-items: center; gap: 12px; flex: 1; flex-wrap: wrap; min-width: 0; border-left: 5px solid #0c2340; padding-left: 15px;">
+  <h2 style="font-size: 17px; color: #0c2340; margin: 0; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; white-space: nowrap;">
+    CURRENT FOCUS
+  </h2>
+  <p style="margin: 0; color: #64748b; font-size: 13px; font-weight: 500; letter-spacing: -0.1px; line-height: 1.4; word-break: keep-all;">
+    Current priorities & seasonal progress
+  </p>
+</div>
 
     <a href="ncaa-stats.html#Current-Focus" style="display: flex; align-items: center; gap: 8px; text-decoration: none; flex-shrink: 0;">
       <span style="color: #64748b; font-size: 10px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">SEE MORE</span>
