--- a/test-3.html
+++ b/test-3.html
@@ -571,7 +571,7 @@
             <div style="display: flex; align-items: center; gap: 8px;">
               <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 2</div>
             </div>
-            <div style="font-size: 11px; color: #7f8c8d; margin-top: 2px;">Feb 24, 2026</div>
+            <div style="font-size: 11px; color: #7f8c8d; margin-top: 2px;">Feb 23, 2026</div>
             <div class="mobile-status-bar">
               <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div>
               <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
@@ -587,7 +587,7 @@
         <tr>
           <td class="col-left">
             <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 3</div>
-            <div style="font-size: 11px; color: #7f8c8d;">Feb 23, 2026</div>
+            <div style="font-size: 11px; color: #7f8c8d;">Feb 24, 2026</div>
             <div class="mobile-status-bar">
               <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div>
               <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
@@ -596,7 +596,7 @@
           </td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="font-size: 12px; color: #95a5a6;">Upcoming</td>
+          <td class="hide-mobile" style="font-size: 12px; color: #95a5a6;">-</td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
         </tr>
       </tbody>
