--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -354,16 +354,16 @@
 <div id="Tournament-Schedule-Scoring" style="padding-top: 5px;">
 </div>
 
-
- <div id="joshua-qualifier-section" style="width: 100%; max-width: 900px; margin: 10px auto; padding: 0; font-family: 'Oswald', sans-serif; box-sizing: border-box; clear: both;">
+<div id="joshua-qualifier-section" style="width: 100%; max-width: 900px; margin: 10px auto; padding: 0; font-family: 'Oswald', sans-serif; box-sizing: border-box; clear: both;">
   
   <div style="margin-bottom: 5px; width: 100%; box-sizing: border-box; padding: 0;">
     
-    <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px; border-left: 5px solid #E31837; padding-left: 15px; margin-left: 10px;">
-      <h3 style="color: #0c2340; margin: 0; text-transform: none; font-size: 1.3em; line-height: 1.2;">Up Coming Tournament</h3>
-      <span style="font-family: 'Montserrat', sans-serif; font-size: 0.85em; color: #888; padding-right: 10px;">Military Collegiate Home Field</span>
+    <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px; border-left: 5px solid #E31837; padding-left: 20px; margin-left: 0;">
+      <h3 style="color: #0c2340; margin: 0; text-transform: none; font-size: 1.3em; line-height: 1.2;">UP COMING TOURNAMENT</h3>
+      <span style="font-family: 'Montserrat', sans-serif; font-size: 0.85em; color: #888; padding-right: 0;">Military Collegiate Home Field</span>
     </div>
   </div>
+</div>
  
   
 <div class="performance-log-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
