--- a/test-1.html
+++ b/test-1.html
@@ -509,12 +509,22 @@ gtag('config', 'G-H1JW8YBDZ8');
     }
   </style>
 
-<div style="margin-bottom: 20px; display: flex; align-items: center; justify-content: center; gap: 15px;">
-  <div style="flex-grow: 1; height: 1px; background: #edf2f7; max-width: 60px;"></div>
-  <h2 style="margin: 0; color: #c98a2e; font-size: 24px; font-weight: 800; letter-spacing: -0.5px; text-transform: none; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-    On-going Activity
-  </h2>
-  <div style="flex-grow: 1; height: 1px; background: #edf2f7; max-width: 60px;"></div>
+ <div class="ongoing-header-wrapper" style="width: 100%; margin-bottom: 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+  <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 10px; box-sizing: border-box;">
+    <div style="box-sizing: border-box;">
+      <h2 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #c98a2e; padding-left: 20px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path>
+          <path d="M22 12A10 10 0 0 0 12 2v10z"></path>
+        </svg>
+        On-going Activity
+      </h2>
+    </div>
+    <div style="margin-left: 25px; color: #64748b; font-size: 11px; font-weight: 700; letter-spacing: 0.3px; background: #f8fafc; padding: 4px 10px; border-radius: 4px; border: 1px solid #edf2f7; box-sizing: border-box; flex-shrink: 0;">
+      Last Updated: Feb. 17, 2026
+    </div>
+  </div>
+  <div style="width: 100%; height: 1px; background: #edf2f7; margin-top: 10px;"></div>
 </div>
 
   <div class="activity-card">
@@ -526,13 +536,13 @@ gtag('config', 'G-H1JW8YBDZ8');
         </div>
         <div style="display: flex; flex-direction: column; gap: 2px;">
           <div style="display: flex; align-items: center; gap: 8px;">
-            <span style="color: #0c2340; font-weight: 800; font-size: 15px;">Compadres Collegiate</span>
-            <span style="color: #94a3b8; font-size: 12px; font-weight: 700;">(Feb 1-3)</span>
+            <span style="color: #0c2340; font-weight: 800; font-size: 15px;"Military Collegiate</span>
+            <span style="color: #94a3b8; font-size: 12px; font-weight: 700;">(Feb 23-24)</span>
           </div>
-          <span style="color: #64748b; font-size: 12px; font-weight: 500;">Iberostar Playa Paraiso, Mexico</span>
+          <span style="color: #64748b; font-size: 12px; font-weight: 500;">TPC San Antonio, The Canyons Course</span>
         </div>
       </div>
-      <a href="ncaa-stats.html#Tournament-Schedule-Scoring" class="icon-link" style="background: #f8fafc; padding: 8px 15px; border-radius: 6px; border: 1px solid #e2e8f0;">
+     <a href="https://scoreboard.clippd.com/tournaments/238654/scoring/participants" class="icon-link" target="_blank" rel="noopener noreferrer" style="background: #f8fafc; padding: 8px 15px; border-radius: 6px; border: 1px solid #e2e8f0;">
         <span style="color: #0c2340; font-size: 11px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">
           View Line-up Status
         </span>
