--- a/index.html
+++ b/index.html
@@ -576,47 +576,32 @@ gtag('config', 'G-H1JW8YBDZ8');
   <div style="width: 100%; height: 1px; background: #edf2f7; margin-top: 10px;"></div>
 </div>
 
-<div class="activity-card" style="margin-bottom: 0px;"> <div class="activity-card-inner" style="padding: 20px 25px; display: flex; align-items: center; justify-content: space-between; gap: 20px;">
-    <div class="tournament-info" style="display: flex; align-items: center; gap: 15px; flex: 1;">
-      <div class="focus-badge">
-        <span class="status-dot-live"></span>
-        <span>Completed Qualifier</span>
-      </div>
-      <div>
-        <div class="date-container" style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;">
-          <span style="color: #0c2340; font-weight: 900; font-size: 19px; letter-spacing: -0.3px;">UTSA Internal Qualifier</span>
-          <span style="color: #94a3b8; font-size: 12px; font-weight: 700;">(Feb 10/12/17)</span>
+  <div class="activity-card">
+    <div style="padding: 15px 20px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 15px;">
+      <div style="display: flex; align-items: center; gap: 15px;">
+        <div style="display: flex; align-items: center; gap: 8px; background: #0c2340; padding: 5px 10px; border-radius: 6px;">
+          <span class="status-dot"></span>
+          <span style="color: #ffffff; font-size: 10px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">Upcoming</span>
         </div>
-        <span style="color: #64748b; font-size: 13px; font-weight: 600;">TPC SAN ANTONIO, The Canyons Course</span>
-      </div>
-    </div>
-
-    <div class="stats-container" style="display: flex; align-items: center; gap: 30px;">
-      <div class="score-group" style="display: flex; flex-direction: column; gap: 6px; border-right: 1px solid #f1f5f9; padding-right: 40px;">
-        <div style="display: flex; justify-content: center;">
-          <div style="display: flex; width: 140px; justify-content: space-between;">
-            <span style="color: #94a3b8; font-size: 10px; font-weight: 800; width: 40px; text-align: center;">Q1</span>
-            <span style="color: #94a3b8; font-size: 10px; font-weight: 800; width: 40px; text-align: center;">Q2</span>
-            <span style="color: #94a3b8; font-size: 10px; font-weight: 800; width: 40px; text-align: center;">Q3</span>
+        <div style="display: flex; flex-direction: column; gap: 2px;">
+          <div style="display: flex; align-items: center; gap: 8px;">
+            <span style="color: #0c2340; font-weight: 800; font-size: 15px;"Military Collegiate</span>
+            <span style="color: #94a3b8; font-size: 12px; font-weight: 700;">(Feb 23-24)</span>
           </div>
-        </div>
-        <div style="display: flex; justify-content: center; align-items: center;">
-          <div style="display: flex; width: 140px; justify-content: space-between; align-items: center;">
-            <span style="color: #e74c3c; font-size: 19px; font-weight: 800; width: 40px; text-align: center;">68 (-4)</span>
-            <span style="color: #e74c3c; font-size: 19px; font-weight: 800; width: 40px; text-align: center;">67 (-5)</span>
-            <span style="color: #0c2340; font-size: 19px; font-weight: 800; width: 40px; text-align: center;">77 (+5)</span>
-          </div>
+          <span style="color: #64748b; font-size: 12px; font-weight: 500;">TPC San Antonio, The Canyons Course</span>
         </div>
       </div>
-      
-      <a href="ncaa-stats.html#Tournament-Schedule-Scoring" class="link-icon-box">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
-          <line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline>
+     <a href="https://scoreboard.clippd.com/tournaments/238654/scoring/participants" class="icon-link" target="_blank" rel="noopener noreferrer" style="background: #f8fafc; padding: 8px 15px; border-radius: 6px; border: 1px solid #e2e8f0;">
+        <span style="color: #0c2340; font-size: 11px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">
+          View Line-up Status
+        </span>
+        <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+          <line x1="7" y1="17" x2="17" y2="7"></line>
+          <polyline points="7 7 17 7 17 17"></polyline>
         </svg>
       </a>
     </div>
   </div>
-</div>
 
 
 <div class="current-focus-header-wrapper" style="width: 100%; margin-top: 25px; margin-bottom: 0px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
