--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -347,7 +347,7 @@
   </h1>
   
   <span style="color: #64748b; font-size: 12px; font-weight: 700; letter-spacing: 0.5px; padding-bottom: 2px; white-space: nowrap;">
-    Last Updated: Feb 17, 2026
+    Last Updated: Feb 18, 2026
   </span>
 </div>
 
@@ -657,7 +657,7 @@
 
 
 
-<div class="master-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="master-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
     <div class="current-focus-section" style="width: 100%; margin: 30px 0 40px 0; padding: 0; box-sizing: border-box;">
         <a id="current-focus" style="display: block; position: relative; top: -100px; visibility: hidden;"></a>
