--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@ gtag('config', 'G-H1JW8YBDZ8');
       </div>
      <a href="https://scoreboard.clippd.com/tournaments/238654/scoring/participants" class="icon-link" target="_blank" rel="noopener noreferrer" style="background: #f8fafc; padding: 8px 15px; border-radius: 6px; border: 1px solid #e2e8f0;">
         <span style="color: #0c2340; font-size: 11px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">
-          View Line-up Status
+          View Participants
         </span>
         <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
           <line x1="7" y1="17" x2="17" y2="7"></line>
