--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -680,15 +680,15 @@
         <div class="legal-pad-content" style="background: #fff9c4; background-image: linear-gradient(#e5e0a3 1px, transparent 1px); background-size: 100% 28px; border-left: 1px solid #e5e0a3; border-right: 1px solid #e5e0a3; border-bottom: 4px solid #d4cf92; border-radius: 0 0 60px 60px; padding: 40px; position: relative; box-shadow: 0 15px 30px rgba(0,0,0,0.07); display: flex; flex-direction: column; box-sizing: border-box; width: 100%;">
             
            <div style="margin-bottom: 45px; position: relative; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-              <div id="Current-Focus" style="margin-bottom: 8px; box-sizing: border-box; text-align: center;">
-  <span style="font-size: 13px; color: #d32f2f; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px;">
-    Posted: Feb 17, 2026
-  </span>
-</div>
-
   <h3 style="margin: 0 auto; color: #0c2340; font-size: 20px; font-weight: 900; text-transform: uppercase; border-bottom: 3px solid #0c2340; display: table; line-height: 1.4; box-sizing: border-box; letter-spacing: 0.5px; padding-bottom: 5px; text-align: center;">
-  Technical Log
-</h3>
+    Technical Log
+  </h3>
+
+  <div id="Current-Focus" style="margin-top: 12px; box-sizing: border-box; text-align: center;">
+    <span style="font-size: 13px; color: #d32f2f; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px;">
+      Posted: Feb 17, 2026
+    </span>
+  </div>
 </div>
 
          <div class="memo-body" style="display: flex; flex-direction: column; gap: 28px; max-width: 100%; position: relative; z-index: 1; margin-bottom: 50px; box-sizing: border-box;">
