--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@ gtag('config', 'G-H1JW8YBDZ8');
           <path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path>
           <path d="M22 12A10 10 0 0 0 12 2v10z"></path>
         </svg>
-        On-going Activity
+        UP COMING ACTIVITY
       </h2>
     </div>
     <div style="margin-left: 25px; color: #64748b; font-size: 11px; font-weight: 700; letter-spacing: 0.3px; background: #f8fafc; padding: 4px 10px; border-radius: 4px; border: 1px solid #edf2f7; box-sizing: border-box; flex-shrink: 0;">
