--- a/index.html
+++ b/index.html
@@ -489,15 +489,13 @@ gtag('config', 'G-H1JW8YBDZ8');
       </p>
     </div>
 
-    <a href="ncaa-stats.html#Current-Focus" style="display: flex; align-items: center; gap: 8px; text-decoration: none; flex-shrink: 0;">
-      <span style="color: #64748b; font-size: 10px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">SEE MORE</span>
-      <div style="width: 34px; height: 34px; border: 2px solid #0c2340; border-radius: 8px; display: flex; align-items: center; justify-content: center; background: #ffffff; box-sizing: border-box;">
-        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
-          <line x1="7" y1="17" x2="17" y2="7"></line>
-          <polyline points="7 7 17 7 17 17"></polyline>
-        </svg>
-      </div>
-    </a>
+    <a href="ncaa-stats.html#Current-Focus" style="display: flex; align-items: center; gap: 8px; text-decoration: none; flex-shrink: 0; background: #f8fafc; padding: 8px 15px; border-radius: 6px; border: 1px solid #e2e8f0; box-sizing: border-box;">
+  <span style="color: #0c2340; font-size: 11px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">SEE MORE</span>
+  <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+    <line x1="7" y1="17" x2="17" y2="7"></line>
+    <polyline points="7 7 17 7 17 17"></polyline>
+  </svg>
+</a>
 
   </div>
   <div style="width: 100%; height: 1px; background: #edf2f7; margin-top: 10px; margin-bottom: -10px;"></div>
