--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ gtag('config', 'G-H1JW8YBDZ8');
     </div>
   </div>
 </div>
-
+</div>
 
 <div class="current-focus-header-wrapper" style="width: 100%; margin-top: 25px; margin-bottom: 0px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <div style="display: flex; justify-content: space-between; align-items: center; gap: 15px; flex-wrap: wrap; box-sizing: border-box;">
