--- a/index.html
+++ b/index.html
@@ -300,14 +300,13 @@ gtag('config', 'G-H1JW8YBDZ8');
       display: block;
     }
 
-    /* 도트 애니메이션 활성화 */
     .status-dot-live {
       width: 8px;
       height: 8px;
-      background-color: #ff4d4d; /* 라이브 상태를 위해 레드 계열 유지 */
+      background-color: #94a3b8; /* 회색으로 변경 */
       border-radius: 50%;
       display: inline-block;
-      animation: pulse-live 2s infinite;
+      /* animation 제거하여 깜빡임 중지 */
     }
 
     .focus-container {
@@ -319,31 +318,9 @@ gtag('config', 'G-H1JW8YBDZ8');
       transition: all 0.2s ease;
     }
 
-    /* 호버 시 배경색만 변경하고 위치 이동 제거 */
-    .focus-container:hover, .activity-card:hover {
+    .focus-container:hover {
       background: #f8fafc;
-    }
-
-    /* 링크 아이콘 공통 디자인 및 호버 효과 */
-    .link-icon-box {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 40px;
-      height: 40px;
-      border-radius: 10px;
-      border: 2px solid #0c2340;
-      background: #ffffff;
-      transition: 0.2s;
-      flex-shrink: 0;
-    }
-
-    .link-icon-box:hover {
-      background: #0c2340 !important;
-    }
-
-    .link-icon-box:hover svg {
-      stroke: #ffffff !important;
+      transform: translateY(-2px);
     }
 
     .focus-badge {
@@ -430,7 +407,74 @@ gtag('config', 'G-H1JW8YBDZ8');
     }
   </style>
 
-  <div class="ongoing-header-wrapper" style="width: 100%; margin-bottom: 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+
+<div class="index-activity-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%;">
+  
+  <style>
+    @keyframes pulse-live {
+      0% { opacity: 1; transform: scale(1); }
+      50% { opacity: 0.3; transform: scale(0.8); }
+      100% { opacity: 1; transform: scale(1); }
+    }
+
+    .activity-card, .focus-container {
+      background: #ffffff;
+      border: 2.5px solid #0c2340;
+      border-radius: 14px;
+      overflow: hidden;
+      box-shadow: 0 4px 15px rgba(12, 35, 64, 0.08);
+      margin-bottom: 20px;
+      box-sizing: border-box;
+      width: 100% !important;
+      display: block;
+    }
+
+    .status-dot-live {
+      width: 8px;
+      height: 8px;
+      background-color: #ff4d4d;
+      border-radius: 50%;
+      display: inline-block;
+      animation: pulse-live 2s infinite;
+    }
+
+    .focus-container {
+      padding: 18px 25px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      text-decoration: none;
+      transition: all 0.2s ease;
+    }
+
+    .focus-container:hover, .activity-card:hover {
+      background: #f8fafc;
+    }
+
+    @media (max-width: 900px) {
+      .index-activity-section { 
+        padding: 0 !important; 
+      }
+    }
+
+    @media (max-width: 768px) {
+      .activity-card-inner { 
+        flex-direction: column !important; 
+        align-items: center !important; 
+        padding: 25px 15px !important; 
+        text-align: center;
+      }
+      .focus-container { 
+        flex-direction: column !important; 
+        align-items: center !important; 
+        text-align: center !important;
+        gap: 15px !important; 
+        padding: 25px 15px !important;
+      }
+    }
+  </style>
+
+  <div class="ongoing-header-wrapper" style="width: 100%; margin-bottom: 10px; box-sizing: border-box;">
     <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 10px; box-sizing: border-box;">
       <div style="box-sizing: border-box;">
         <h2 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #c98a2e; padding-left: 20px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
@@ -475,7 +519,7 @@ gtag('config', 'G-H1JW8YBDZ8');
     </div>
   </div>
 </div>
-</div>
+
 
 <div class="current-focus-header-wrapper" style="width: 100%; margin-top: 25px; margin-bottom: 0px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <div style="display: flex; justify-content: space-between; align-items: center; gap: 15px; flex-wrap: wrap; box-sizing: border-box;">
@@ -489,13 +533,15 @@ gtag('config', 'G-H1JW8YBDZ8');
       </p>
     </div>
 
-    <a href="ncaa-stats.html#Current-Focus" style="display: flex; align-items: center; gap: 8px; text-decoration: none; flex-shrink: 0; background: #f8fafc; padding: 8px 15px; border-radius: 6px; border: 1px solid #e2e8f0; box-sizing: border-box;">
-  <span style="color: #0c2340; font-size: 11px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">SEE MORE</span>
-  <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
-    <line x1="7" y1="17" x2="17" y2="7"></line>
-    <polyline points="7 7 17 7 17 17"></polyline>
-  </svg>
-</a>
+    <a href="ncaa-stats.html#Current-Focus" style="display: flex; align-items: center; gap: 8px; text-decoration: none; flex-shrink: 0;">
+      <span style="color: #64748b; font-size: 10px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">SEE MORE</span>
+      <div style="width: 34px; height: 34px; border: 2px solid #0c2340; border-radius: 8px; display: flex; align-items: center; justify-content: center; background: #ffffff; box-sizing: border-box;">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+          <line x1="7" y1="17" x2="17" y2="7"></line>
+          <polyline points="7 7 17 7 17 17"></polyline>
+        </svg>
+      </div>
+    </a>
 
   </div>
   <div style="width: 100%; height: 1px; background: #edf2f7; margin-top: 10px; margin-bottom: -10px;"></div>
