--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ gtag('config', 'G-H1JW8YBDZ8');
             <path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path>
             <path d="M22 12A10 10 0 0 0 12 2v10z"></path>
           </svg>
-          UP COMING ACTIVITY
+          UPCOMING ACTIVITY
         </h2>
       </div>
       <div style="margin-left: 25px; color: #64748b; font-size: 11px; font-weight: 700; letter-spacing: 0.3px; background: #f8fafc; padding: 4px 10px; border-radius: 4px; border: 1px solid #edf2f7; box-sizing: border-box; flex-shrink: 0;">
@@ -539,28 +539,25 @@ gtag('config', 'G-H1JW8YBDZ8');
 <div class="current-focus-header-wrapper" style="width: 100%; margin-top: 25px; margin-bottom: 0px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <div style="display: flex; justify-content: space-between; align-items: center; gap: 15px; flex-wrap: wrap; box-sizing: border-box;">
     
-    <div style="display: block; flex: 1; min-width: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-  <h2 style="font-size: 17px; color: #0c2340; margin: 0; border-left: 5px solid #0c2340; padding-left: 15px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; white-space: nowrap; line-height: 1.2;">
-    CURRENT FOCUS
-  </h2>
-  
-  <p style="margin: 4px 0 0 0; padding-left: 20px; color: #64748b; font-size: 13px; font-weight: 500; letter-spacing: -0.1px; line-height: 1.4; word-break: keep-all;">
-    Current priorities & seasonal progress
-  </p>
-</div>
+    <div style="display: block; flex: 1; min-width: 0; box-sizing: border-box; border-left: 5px solid #0c2340; padding-left: 15px;">
+      <h2 style="font-size: 17px; color: #0c2340; margin: 0; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; white-space: nowrap; line-height: 1.2;">
+        CURRENT FOCUS
+      </h2>
+      <p style="margin: 4px 0 0 0; color: #64748b; font-size: 13px; font-weight: 500; letter-spacing: -0.1px; line-height: 1.4; word-break: keep-all;">
+        Current priorities & seasonal progress
+      </p>
+    </div>
 
     <a href="ncaa-stats.html#Current-Focus" style="display: flex; align-items: center; gap: 8px; text-decoration: none; flex-shrink: 0; background: #f8fafc; padding: 8px 15px; border-radius: 6px; border: 1px solid #e2e8f0; box-sizing: border-box;">
-  <span style="color: #0c2340; font-size: 11px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">SEE MORE</span>
-  <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
-    <line x1="7" y1="17" x2="17" y2="7"></line>
-    <polyline points="7 7 17 7 17 17"></polyline>
-  </svg>
-</a>
+      <span style="color: #0c2340; font-size: 11px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">SEE MORE</span>
+      <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+        <line x1="7" y1="17" x2="17" y2="7"></line>
+        <polyline points="7 7 17 7 17 17"></polyline>
+      </svg>
+    </a>
 
   </div>
   <div style="width: 100%; height: 1px; background: #edf2f7; margin-top: 10px; margin-bottom: -10px;"></div>
-</div>
-  
 </div>
 
 
@@ -579,7 +576,7 @@ gtag('config', 'G-H1JW8YBDZ8');
     <div style="position: relative; transition: transform 0.3s ease; display: block;">
       <a href="https://scoreboard.clippd.com/tournaments/238654/scoring/participants" target="_blank" style="text-decoration: none; display: block;">
         <div style="background: #ffffff; padding: 30px 25px; border-radius: 24px; border: 1px solid #e1e8ed; box-shadow: 0 15px 35px rgba(0,0,0,0.06); position: relative; overflow: hidden; border-top: 6px solid #c98a2e; height: 100%; box-sizing: border-box;">
-          <div style="background: #c98a2e; color: white; padding: 5px 15px; border-radius: 0 0 10px 10px; font-size: 11px; font-weight: 800; position: absolute; top: 0; left: 25px; letter-spacing: 1px; box-shadow: 0 2px 5px rgba(201,138,46,0.2);">UP COMING</div>
+          <div style="background: #c98a2e; color: white; padding: 5px 15px; border-radius: 0 0 10px 10px; font-size: 11px; font-weight: 800; position: absolute; top: 0; left: 25px; letter-spacing: 1px; box-shadow: 0 2px 5px rgba(201,138,46,0.2);">UPCOMING</div>
           
           <h3 style="font-size: 22px; margin: 20px 0 8px 0; color: #0c2340; font-weight: 800; line-height: 1.2; display: flex; align-items: center; gap: 8px;">
             Military City Collegiate
