--- a/index.html
+++ b/index.html
@@ -508,7 +508,6 @@ gtag('config', 'G-H1JW8YBDZ8');
         </div>
       </div>
       <style>
-  /* 모바일에서 버튼 중앙 정렬을 위한 미디어 쿼리 */
   @media (max-width: 768px) {
     .mobile-center-btn {
       justify-content: center !important;
@@ -533,13 +532,11 @@ gtag('config', 'G-H1JW8YBDZ8');
 </a>
     </div>
   </div>
-</div>
 
-
-<div class="current-focus-header-wrapper" style="width: 100%; margin-top: 10px; margin-bottom: 0px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="current-focus-header-wrapper" style="width: 100%; margin-top: 0px; margin-bottom: 0px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <div style="display: flex; justify-content: space-between; align-items: center; gap: 15px; flex-wrap: wrap; box-sizing: border-box;">
     
-    <div style="display: block; flex: 1; min-width: 0; box-sizing: border-box; border-left: 5px solid #0c2340; padding-left: 15px;">
+    <div style="display: block; flex: 1; min-width: 0; box-sizing: border-box; border-left: 5px solid #0c2340; padding-left: 15px; text-align: left;">
       <h2 style="font-size: 17px; color: #0c2340; margin: 0; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; white-space: nowrap; line-height: 1.2;">
         CURRENT FOCUS
       </h2>
