--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@ gtag('config', 'G-H1JW8YBDZ8');
             <span style="color: #0c2340; font-weight: 800; font-size: 15px;">Military Collegiate</span>
             <span style="color: #94a3b8; font-size: 12px; font-weight: 700;">(Feb 23-24)</span>
           </div>
-          <span style="color: #64748b; font-size: 12px; font-weight: 500;">TPC San Antonio, The Canyons Course</span>
+          <span style="color: #64748b; font-size: 12px; font-weight: 500;">San Antonio, Texas / TPC San Antonio - Canyons</span>
         </div>
       </div>
       <style>
