--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -360,7 +360,7 @@
     
     <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 25px; border-left: 5px solid #E31837; padding-left: 20px; margin-left: 0;">
       <h3 style="color: #0c2340; margin: 0; text-transform: none; font-size: 1.3em; line-height: 1.2;">UPCOMING TOURNAMENT</h3>
-      <span style="font-family: 'Montserrat', sans-serif; font-size: 0.85em; color: #888; padding-right: 0;">Military Collegiate Home Field</span>
+      <span style="font-family: 'Montserrat', sans-serif; font-size: 0.85em; color: #888; padding-right: 0;">6th Event: Military Collegiate | Home Field</span>
     </div>
   </div>
 </div>
