--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -555,13 +555,13 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d;">Feb 23, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value under-par">-</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value under-par">-</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="color: #bdc3c7;">-</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="color: #bdc3c7;">-</span></div>
               <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">-</span></div>
             </div>
           </td>
-          <td class="hide-mobile under-par">-</td>
-          <td class="hide-mobile under-par">-</td>
+          <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+          <td class="hide-mobile" style="color: #bdc3c7;">-</td>
           <td class="hide-mobile" style="font-size: 12px; color: #95a5a6; font-weight: 700;">-</td>
           <td class="hide-mobile" style="color: #0c2340; font-weight: 900; font-size: 15px;">-</td>
         </tr>
@@ -623,7 +623,7 @@
 }
 </style>
 
-      <div style="text-align: right;">
+    <div style="text-align: right;">
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total Score</span>
       <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span>
     </div>
