--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -562,8 +562,8 @@
           </td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="font-size: 12px; color: #95a5a6; font-weight: 700;">-</td>
-          <td class="hide-mobile" style="color: #0c2340; font-weight: 900; font-size: 15px;">-</td>
+          <td class="hide-mobile" style="font-size: 12px; color: #bdc3c7;">-</td>
+          <td class="hide-mobile" style="color: #bdc3c7;">-</td>
         </tr>
 
       <tr>
@@ -580,7 +580,7 @@
           </td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="font-size: 12px; color: #bdc3c7; font-weight: 700;">-</td>
+          <td class="hide-mobile" style="font-size: 12px; color: #bdc3c7;">-</td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
         </tr>
 
