--- a/test-1.html
+++ b/test-1.html
@@ -618,6 +618,7 @@ gtag('config', 'G-H1JW8YBDZ8');
       </p>
     </div>
     <div class="focus-arrow-svg">
+        <span style="color: #0c2340; font-size: 11px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">SEE MORE</span>
       <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round">
         <line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline>
       </svg>
