--- a/test-1.html
+++ b/test-1.html
@@ -1012,7 +1012,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
     <div class="joshua-unique-card card-spring">
       <div>
         <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 15px;">
-          <div style="display: flex; align-items: center;">
+          <div style="display: flex; align-items: left;">
             <div style="background: rgba(201,138,46,0.15); width: 45px; height: 45px; border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-right: 15px; border: 1px solid rgba(201,138,46,0.4);">
               <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#c98a2e" stroke-width="2"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
             </div>
